Cleaned up some styling issues.
* Previous commit broke margin in dialogs. Simplified the logic here so it always covers both panels and dialogs, in browsers with or without shadow dom support.
* "Exec" panel text area was too wide. Account for padding and border in width (and make that the default rather than specific to this instance).
* "Exec" panel text area has a scroll-bar in IE even when it doesn't need it.
* Fix size of content area to a multiple of column width so column spacing remains fixed.
* Dialog overlay was causing a scrollbar to display (because of padding).
* Dialog could be scrolled out of the way (set position to fixed).

--- a/src/sim-host/sim-host.css
+++ b/src/sim-host/sim-host.css
@@ -69,8 +69,8 @@ body /deep/ .cordova-widget {
     font-size: 14px;
 }
 
-/* First selector is for browsers with shadow dom, second selector for browsers without */
-cordova-panel > .cordova-group,  cordova-panel > section > section > .cordova-group {
+/* 12px margin around top level items in the content a panel */
+body /deep/ .cordova-content > ::content > * {
     margin: 12px;
     position: relative;
 }
@@ -106,13 +106,12 @@ body /deep/ input {
 }
 
 body /deep/ .cordova-overlay {
-    position: absolute;
+    position: fixed;
     left: 0;
     top: 0;
     z-index: 10000;
     width: 100%;
     height: 100%;
-    padding: 5px;
     background-color: rgba(245, 245, 245, 0.9);
 
     display: -webkit-box;
@@ -120,25 +119,6 @@ body /deep/ .cordova-overlay {
     display: -ms-flexbox;
     display: -webkit-flex;
     display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-body /deep/ .cordova-no-plugins {
-    position: absolute;
-    left: 0;
-    top: 0;
-    z-index: 10000;
-    width: 100%;
-    height: 100%;
-    padding: 5px;
-
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    flex-flow: column;
     justify-content: center;
     align-items: center;
 }
@@ -181,6 +161,12 @@ body /deep/ isindex {
     margin-left: 0;
     margin-right: 0;
     resize: none;
+}
+
+body /deep/ textarea {
+    padding: 2px 4px;
+    width: calc(100% - 10px); /* Account for padding and border */
+    overflow-y: auto;
 }
 
 body /deep/ input[type^=text],
